SummerDelight - Fix context values for analytic

--- a/summerdelight/css/styles.css
+++ b/summerdelight/css/styles.css
@@ -1,5 +1,5 @@
 /**
- * Vodafone Reboot Framework: Version 2.15.0. Generation Date: 2021-06-21T12:48:07.969Z
+ * Vodafone Reboot Framework: Version 2.15.0. Generation Date: 2021-06-21T13:58:53.144Z
  */
 
-.vfes-ms-content .vf-timeline p{max-width:inherit;width:85%}.vfes-ms-content .vf-cards-tv img{height:auto}.vfes-ms-content .vfms-faqs a{color:#fff}
+.vfes-ms-content .vf-timeline p{max-width:inherit;width:85%}.vfes-ms-content .vf-cards-tv img{height:auto}
