--- a/summerdelight/resources/templates/partials/cardsTV.hbs
+++ b/summerdelight/resources/templates/partials/cardsTV.hbs
@@ -63,10 +63,10 @@
               </span>
               <a
                 class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small"
-                href="https://m.vodafone.es/web-camp-ver-2021"
+                href="{{link.href}}"
                 data-analytics-category="cta"
                 data-analytics-element="listado packs tv"
-                data-analytics-context="{{title}}"
+                data-analytics-context="{{link.context}}"
                 data-analytics-id="-9332803914459"
               >
                 {{link.label}}
