--- a/summerdelight/resources/templates/partials/legales.hbs
+++ b/summerdelight/resources/templates/partials/legales.hbs
@@ -1,4 +1,4 @@
-<section class="ws10-u--pb4x ws10-align--right">
+<section class="ws10-u--pt4x ws10-u--pb4x ws10-align--right">
     <a
       class="ws10-c-link-chevron ws10-c-link-chevron--white"
       target="_blank"
