SummerDelight - Fix context values for analytic with FAQs

--- a/summerdelight/resources/templates/index.hbs
+++ b/summerdelight/resources/templates/index.hbs
@@ -12,6 +12,7 @@
 		<!-- Section Timeline -->
 		{{> timeline }}
 		<!-- Faqs -->
+		{{> faqs }}
 		<!-- Link Legales -->
 		{{> legales }}
 	</div>
