SummerDelight - Filters align left

--- a/summerdelight/resources/templates/partials/filters.hbs
+++ b/summerdelight/resources/templates/partials/filters.hbs
@@ -1,6 +1,6 @@
 <section class="ws10-u--pt4x ws10-u--pb4x">
-  <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--center">
-    <span class="ws10-c-filter ws10-u--mr2x vf-filter-one" data-js-vf="_filter">
+  <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--center@desktop ws10-u--pl4x@mobile">
+    <span class="ws10-c-filter ws10-u--mr2x@desktop vf-filter-one" data-js-vf="_filter">
       <input
         type="checkbox"
         class="ws10-c-filter__input"
@@ -17,7 +17,7 @@
       </label>
     </span>
     <span
-      class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x ws10-u--mt4x@mobile vf-filter-two"
+      class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x@desktop ws10-u--mt2x@mobile vf-filter-two"
       data-js-vf="_filter">
       <input
         type="checkbox"
