SummerDelight - Timeline images alt text

--- a/summerdelight/resources/templates/partials/timeline.hbs
+++ b/summerdelight/resources/templates/partials/timeline.hbs
@@ -7,7 +7,7 @@
                      src="img/timeline/{{ icon }}.png"
                      data-ws10-js="lazy-load"
                      loading="lazy"
-                     alt="">
+                     alt="{{ title }}">
                  <p class="ws10-c-timeline-steps__title">{{ title }}</p>
                 <p class=" ws10-u-heading--5-lt	ws10-c-timeline-steps__text">{{ subtitle }}</p>
             </li>
