--- a/summerdelight/resources/templates/partials/filters.hbs
+++ b/summerdelight/resources/templates/partials/filters.hbs
@@ -1,5 +1,5 @@
-<section class="ws10-u--pt4x ws10-u--pb4x">
-  <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--center@desktop ws10-u--pl4x@mobile">
+<section class="vf-filters ws10-u--pt4x ws10-u--pb4x">
+  <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--left ws10-u--pl4x@mobile">
     <span class="ws10-c-filter ws10-u--mr2x@desktop vf-filter-one" data-js-vf="_filter">
       <input
         type="checkbox"
