--- a/summerdelight/resources/templates/partials/hero.hbs
+++ b/summerdelight/resources/templates/partials/hero.hbs
@@ -1,4 +1,4 @@
-<div class="ws10-c-hero-dmp ws10-c-hero-dmp--dark" data-ws10-js="hero-dmp">
+<div class="vf-hero ws10-c-hero-dmp ws10-c-hero-dmp--dark" data-ws10-js="hero-dmp">
   <picture class="ws10-c-hero-dmp__w-img">
     <source srcset="img/cabecera-desktop.webp" type="image/webp" />
     <source srcset="img/cabecera-desktop.png" type="image/png" />
