SummerDelight - Move analytics to span in Filters

--- a/summerdelight/resources/templates/partials/filters.hbs
+++ b/summerdelight/resources/templates/partials/filters.hbs
@@ -1,15 +1,17 @@
 <section class="vf-filters ws10-u--pt4x ws10-u--pb4x">
   <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--left ws10-u--pl4x@mobile">
-    <span class="ws10-c-filter ws10-u--mr2x@desktop vf-filter-one" data-js-vf="_filter">
+    <span class="ws10-c-filter ws10-u--mr2x@desktop vf-filter-one"
+        data-js-vf="_filter"
+        data-analytics-category="cta"
+        data-analytics-element="tab distributiva"
+        data-analytics-context="clientes de movil, fibra, movil + fibra"
+        >
       <input
         type="checkbox"
         class="ws10-c-filter__input"
         id="idFilter1"
         name="nameInput"
         value="value"
-        data-analytics-category="cta"
-        data-analytics-element="tab distributiva"
-        data-analytics-context="clientes de movil, fibra, movil + fibra"
         checked
       />
       <label class="ws10-c-filter__label ws10-c-filter__label" for="idFilter1">
@@ -17,17 +19,18 @@
       </label>
     </span>
     <span
-      class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x@desktop ws10-u--mt2x@mobile vf-filter-two"
-      data-js-vf="_filter">
+        class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x@desktop ws10-u--mt2x@mobile vf-filter-two"
+        data-js-vf="_filter"
+        data-analytics-category="cta"
+        data-analytics-element="tab distributiva"
+        data-analytics-context="clientes de tarifa familiar"
+        >
       <input
         type="checkbox"
         class="ws10-c-filter__input"
         id="idFilter2"
         name="nameInput"
         value="value"
-        data-analytics-category="cta"
-        data-analytics-element="tab distributiva"
-        data-analytics-context="clientes de tarifa familiar"
       />
       <label
         class="ws10-c-filter__label ws10-c-filter__label--grey"
