SummerDelight - Fix title Hero

--- a/summerdelight/resources/templates/partials/hero.hbs
+++ b/summerdelight/resources/templates/partials/hero.hbs
@@ -15,8 +15,8 @@
       <div
         class="ws10-o-layout__item ws10-u--8/12@tablet ws10-u--push-2/12@tablet ws10-u--4/12@desktop ws10-u--push-1/12@desktop"
       >
-        <p class="ws10-u-heading--4-lt">{{hero.text}}</p>
         <p class="ws10-c-hero-dmp__title ws10-u-heading--3-lt">
+          {{hero.text}}<br />
           {{hero.title.[0]}}
           <strong>{{hero.title.[1]}}</strong>
           {{hero.title.[2]}}<br />
