cambio texto padres mayores

--- a/padres-mayores/cabecera/resources/templates/index.hbs
+++ b/padres-mayores/cabecera/resources/templates/index.hbs
@@ -5,7 +5,7 @@
 		<div class="ws10-o-wrapper">
 			<div class="ws10-o-layout">
 					<div class="ws10-o-layout__item ws10-u--1/2@desktop ws10-u--1/2@tablet ws10-u--1/1@mobile">
-						<h2 class="ws10-u-heading--4">Productos para mayores</h2>
+						<h2 class="ws10-u-heading--4">Productos para tus padres</h2>
 						<p class="ws10-u-heading--2-lt">Descubre nuestros <strong> productos para tus padres</strong> y disfruta con ellos</p>
 						<div class="ws10-o-layout ws10-u--mt12x@desktop  ws10-u--hidden-visually-until@desktop">
 							<div class="ws10-o-layout__item ws10-u--1/3@desktop">
