pelenaca: hotfix errata

--- a/v-home/resources/templates/partials/features.hbs
+++ b/v-home/resources/templates/partials/features.hbs
@@ -60,7 +60,7 @@
                 <use class="icon-v3" xlink:href="#icon-data-mid"></use>
             </svg>
             </div>
-            <p class="ws10-c-product-detail__text">Visualiza ver desde el smartphone lo que está grabando la cámara de V-Home sin que consuma datos de tu tarifa móvil (si eres cliente móvil de Vodafone).</p>
+            <p class="ws10-c-product-detail__text">Visualiza desde el smartphone lo que está grabando la cámara de V-Home sin que consuma datos de tu tarifa móvil (si eres cliente móvil de Vodafone).</p>
         </div>
     </div>
 </section>
