--- a/v-home/resources/templates/partials/safetyKit.hbs
+++ b/v-home/resources/templates/partials/safetyKit.hbs
@@ -78,7 +78,7 @@
                                         <p class="ws10-c-tray-quick-action__title">multifunción</p>
                                     </div>
                                     <picture class="ws10-c-tray-quick-action__image">
-                                        {{!-- <source srcset="img/safety-kit/backdrop/sensor.webp" type="image/webp"> --}}
+                                        <source srcset="img/safety-kit/backdrop/sensor-multifuncion.webp" type="image/webp">
                                         <img src="img/safety-kit/backdrop/sensor-multifuncion.png" alt="Sensor multifunción V-Home" >
                                     </picture>
                                 </div>
