Destiny One - cardRates and CTA partials

--- a/destiny4.0/one/plp/resources/templates/index.hbs
+++ b/destiny4.0/one/plp/resources/templates/index.hbs
@@ -5,8 +5,8 @@
     {{> banner }}
 
     <div class="ws10-o-wrapper">
-        <!-- Section RATES -->
-        {{> rates }}
+        <!-- Section Card Rates -->
+        {{> cardRates }}
         <!-- Section ADDONS -->
         {{> addons }}
         <!-- Sections Vodafone One -->
