--- a/destiny4.0/one/plp/resources/templates/partials/cardRate.hbs
+++ b/destiny4.0/one/plp/resources/templates/partials/cardRate.hbs
@@ -47,7 +47,7 @@
                             </p>
                         </div>
                     </div>
-                    {{> cta params=cta }}
+                    {{> cta cta }}
                 </div>
             </div>
         </div>
