--- a/destiny4.0/one/plp/resources/templates/partials/cta.hbs
+++ b/destiny4.0/one/plp/resources/templates/partials/cta.hbs
@@ -1,9 +1,9 @@
-<a href="{{ params.url }}"
-    target="_self" name="{{ params.label }}" title="{{ params.label }}"
+<a href="{{ url }}"
+    target="_self" name="{{ label }}" title="{{ label }}"
     class="ws10-c-button ws10-c-button--auto vf-button--mobile"
-    data-analytics-context="{{ params.context }}"
-    data-analytics-element="{{ params.element }}"
-    data-analytics-category="{{ params.category }}"
-    data-analytics-id="{{ params.id }}">
-    {{ params.label }}
+    data-analytics-context="{{ context }}"
+    data-analytics-element="{{ element }}"
+    data-analytics-category="{{ category }}"
+    data-analytics-id="{{ id }}">
+    {{ label }}
 </a>
