--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/headerTicket.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/headerTicket.hbs
@@ -1,192 +1,18 @@
 <section class="vf-banner ws10-u--1/1" data-js="_banner">
   <div class="ws10-o-wrapper">
     <div class="ws10-o-layout">
-      <div
-        class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet"
-      >
-        <!-- OFERTA TRY -->
-        <span class="ws10-u-heading--4">Fibra + Móvil
-          <strong>{{header-ticket.title-1}}</strong></span>
-
-        <h2
-          class="ws10-u--pt5x ws10-u--3/4@desktop"
-        >{{header-ticket.title-2}}</h2>
-        <span
-          class="ws10-u-color--primary ws10-flex ws10-flex__align-items--center ws10-u--hidden-visually-until@tablet"
-        >
-          <img
-            class="ws10-u--pr1x"
-            alt="icono mejor precio Vodafone"
-            src="{{header-ticket.icono}}"
-          />
-          <span>{{header-ticket.icono-texto}}</span>
+      <div class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet">
+        <span class="ws10-u-heading--4">{{{ header.title }}}</strong></span>
+        <h2 class="ws10-u--pt5x ws10-u--3/4@desktop" >{{ header.title2 }}</h2>
+        <span class="ws10-u-color--primary ws10-flex ws10-flex__align-items--center ws10-u--hidden-visually-until@tablet">
+          <img class="ws10-u--pr1x" alt="icono mejor precio Vodafone" src="{{ header.icon }}"/>
+          <span>{{ header.label }}</span>
         </span>
       </div>
-          <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt ws10-u--mb0 vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet">
-            {{header-ticket.title-ticket}}
-          </h2>
-
-          {{> cardRate cardRates }}
-
-      <!-- <div
-        class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet" style="top: 40px;"
-        data-js-vf="_ticket"
-      >
-        <div class="vf-ticket__floating">
-          <section
-            class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow"
-            data-ws10-js="card-rate"
-          >
-            <div class="ws10-c-card-rate__w-rates">
-              <div class="ws10-c-card-rate__a-rate">
-
-                <form
-                  action=""
-                  method="get"
-                  class="vf-form ws10-c-card-rate__form ws10-c-form"
-                  data-js-vf="_showOrHideSticky"
-                >
-                  <fieldset>
-                    <legend class="ws10-c-card-rate__form-title">
-                      ¿Cómo quieres la línea móvil principal?
-                    </legend>
-                    <div class="ws10-c-card-rate__w-form-select">
-                      <div class="vf-form__box ws10-c-form__box">
-                        <input
-                          type="radio"
-                          name="rate-1-card-rate"
-                          id="rate-1-card-rate-option-1"
-                          class="ws10-c-form__radio"
-                          data-analytics-element="cardrate"
-                          data-analytics-context="portabilidad"
-                          data-analytics-category="cta"
-                          checked
-                        />
-                        <label
-                          for="rate-1-card-rate-option-1"
-                          class="ws10-c-card-rate__form-label ws10-c-form__label"
-                          data-js-vf="_buttonTypeLine"
-                        >
-                          Portabilidad
-                        </label>
-                      </div>
-                      <div class="vf-form__box s10-c-form__box">
-                        <input
-                          type="radio"
-                          name="rate-1-card-rate"
-                          id="rate-1-card-rate-option-2"
-                          class="ws10-c-form__radio"
-                          data-analytics-element="cardrate"
-                          data-analytics-context="alta nueva"
-                          data-analytics-category="cta"
-                        />
-                        <label
-                          for="rate-1-card-rate-option-2"
-                          class="ws10-c-card-rate__form-label ws10-c-form__label"
-                          data-js-vf="_buttonTypeLine"
-                          data-js-vf-value="newNumber"
-                        >Nuevo Número</label>
-                      </div>
-                    </div>
-                  </fieldset>
-                  <div
-                    class="ws10-c-card-rate__w-cta"
-                    data-js-vf="_portability"
-                  >
-                    <div class="ws10-c-card-rate__w-offers">
-                      <div class="ws10-c-card-rate__offer" id="rate-1-offer-1">
-                        <p
-                          class="ws10-c-card-rate__dto ws10-c-card-rate__dto--percent"
-                        >
-                          {{header-ticket.title-1}}
-                        </p>
-                        <p
-                          class="ws10-c-card-rate__dto ws10-c-card-rate__dto--label"
-                        >
-                          {{price.0.permanencia}}
-                        </p>
-                        <p
-                          class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price"
-                        >
-                          <del>{{price.0.precio_sinpromo}}€/mes</del>
-                        </p>
-                        <p class="ws10-c-card-rate__price ws10-u-color--black">
-                          {{price.0.precio_conpromo}}€<sub>/mes</sub>
-                        </p>
-                      </div>
-                    </div>
-                    <a
-                        data-cta="300:port:card"
-                        type="submit"
-                        title="{{cta.title}}"
-                        class="ws10-c-button ws10-c-button--auto"
-                        href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id={{ cta.loquiero.[0] }}&tcli=0&tta=1"
-                        onmousedown="addtocart(utag_data.plans_add2cart[0])"
-                        data-analytics-element="{{cta.element}}"
-                        data-analytics-context="{{cta.context}}"
-                        data-analytics-category="{{cta.category}}"
-                        data-analytics-id="{{cta.id}}"
-                      >
-                        {{cta.title}}
-                        <span
-                          class="ws10-u--hidden-visually"
-
-                        ></span>
-                      </a>
-                  </div>
-                  <div
-                    class="ws10-c-card-rate__w-cta ws10-u--hidden"
-                    data-js-vf="_newNumber"
-                  >
-                    <div class="ws10-c-card-rate__w-offers">
-                      <div class="ws10-c-card-rate__offer" id="rate-1-offer-1">
-                        <p
-                          class="ws10-c-card-rate__dto ws10-c-card-rate__dto--percent"
-                        >
-                          {{header-ticket.title-1}}
-                        </p>
-                        <p
-                          class="ws10-c-card-rate__dto ws10-c-card-rate__dto--label"
-                        >
-                          {{price.1.permanencia}}
-                        </p>
-                        <p
-                          class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price"
-                        >
-                          <del>{{price.1.precio_sinpromo}}€/mes</del>
-                        </p>
-                        <p class="ws10-c-card-rate__price ws10-u-color--black">
-                          {{price.1.precio_conpromo}}€<sub>/mes</sub>
-                        </p>
-                      </div>
-                    </div>
-                    <a
-                        data-cta="300:port:card"
-                        type="submit"
-                        title="{{cta.title}}"
-                        class="ws10-c-button ws10-c-button--auto"
-                        href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id={{ cta.loquiero.[1] }}&tcli=0&tta=1"
-                        onmousedown="addtocart(utag_data.plans_add2cart[1])"
-                        data-analytics-element="{{cta.element}}"
-                        data-analytics-context="{{cta.context}}"
-                        data-analytics-category="{{cta.category}}"
-                        data-analytics-id="{{cta.id}}"
-                      >
-                        {{cta.title}}
-                        <span
-                          class="ws10-u--hidden-visually"
-
-                        ></span>
-                      </a>
-                  </div>
-
-                </form>
-              </div>
-            </div>
-          </section>
-        </div>
-    </div> -->
-
+      <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt ws10-u--mb0 vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet">
+        {{ cardRates.title }}
+      </h2>
+      {{> cardRate cardRates }}
     </div>
   </div>
 </section>
