--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/cardRate.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/cardRate.hbs
@@ -8,7 +8,7 @@
                         data-vfes-seo-empathy-promoprice="{{ offers.dtoPrice }}"
                         data-vfes-seo-empathy-price="{{ offers.dtoFinalPrice }}">
                         {{#each description }}
-                        <li class="ws10-c-card-rate__product-info-item">
+                        <li class="ws10-c-card-rate__product-info-item" {{#if js-vf }} data-js-vf="{{ js-vf }}" {{/if }}>
                             <svg class="ws10-c-card-rate__product-icon ws10-u-color--black"
                                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <use xlink:href="#{{ icon }}"></use>
