--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/tv.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/tv.hbs
@@ -39,7 +39,7 @@
       id="idList"
       style="left: 0; position:relative;"
     >
-    {{ tv.info }}
+    {{ tv.legal }}
     </span>
   </div>
 </section>
