--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/deco.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/deco.hbs
@@ -1,15 +1,9 @@
 <section class="vf-deco ws10-u--pt12x">
-    <p class="ws10-u-heading--3"><strong>¿Cómo es la experiencia de TV sin decodificador?</strong></p>
-    <picture>
-        <source class="ws10-u--1/1" srcset="img/section-deco/contenido-tv.webp"  type="image/webp">
-        <source class="ws10-u--1/1" srcset="img/section-deco/contenido-tv.png" type="image/png">
-        <img class="ws10-u--1/1" src="img/section-deco/contenido-tv.png" alt="interfaz de tv Vodafone, sin decodificador">
-    </picture>
+    <h3 >{{deco.title}}</h3>
 
-    <p>Vodafone TV con <strong>calidad HD en tu Smart TV (a través de la App Vodafone TV) y en tus
-        dispositivos como móvil, tablet, PC, Fire TV Stick y Chromecast</strong> para disfrutar de
-        una experiencia online.
-        Consultar dispositivos compatibles
+        {{> picture params=deco}}
+
+    <p>{{{deco.description}}}
     </p>
     <div class="ws10-c-logo-list ws10-c-logo-list--mini">
         <p class="ws10-c-logo-list__w-show-all">
