--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/deco.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/deco.hbs
@@ -1,10 +1,9 @@
 <section class="vf-deco ws10-u--pt12x">
     <h3 >{{deco.title}}</h3>
-
-        {{> picture params=deco}}
-
-    <p>{{{deco.description}}}
-    </p>
+            
+                {{> picture deco.img.[0]}}
+            
+    <p>{{{deco.description}}}</p>
     <div class="ws10-c-logo-list ws10-c-logo-list--mini">
         <p class="ws10-c-logo-list__w-show-all">
             <a class="ws10-c-logo-list__show-all vfms-link" data-backdrop="dispositivos-compatibles" data-analytics-context="dispositivos compatibles" data-analytics-element="consultar dispositivos compatibles" data-analytics-category="cta" data-analytics-id="-3060846269077"
@@ -54,6 +53,15 @@
                 estés donde estés y cuando quieras.</p>
         </div>
     </div>
+
+
+<ul class="vf-deco__details ws10-flex ws10-flex__wrap">
+    {{#each deco.productDetail}}
+  {{> productDetail params=this}}
+    {{/each}}
+  </ul>
+
+
     {{!-- Pop Up --}}
     <div class="ws10-c-backdrop js-backdrop" data-ws10-js="backdrop" aria-hidden="true">
         <section id="dispositivos-compatibles" class="ws10-c-backdrop__item js-backdrop-item" aria-hidden="true"
