--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/index.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/index.hbs
@@ -16,7 +16,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 3
                 <!-- MÓVIL -->
                 {{> mobile }}
                 <!-- SEGUNDA LÍNEA GRATIS -->
-                {{> secondLine }}
+                {{> secondline }}
                 {{!-- TV --}}
                 {{> tv }}
                 <!-- POPUP TV -->
@@ -26,13 +26,13 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 3
                 <!-- FIBRA -->
                 {{> fibra }}
                 <!-- TAMBIÉN INCLUIDO -->
-                {{> alsoIncluded }}
+                {{> alsoincluded }}
 
 
                 <!-- SIN SORPRESAS -->
-                {{> sinSorpresas }}
+                {{> sinsorpresas }}
                 <!-- TIMELINE  -->
-                {{> timeLine }}
+                {{> timeline }}
             </div>
         </div>
     </div>
