--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/fibra.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/fibra.hbs
@@ -1,7 +1,6 @@
 <section class="vf-fiber ws10-u--pt12x">
-  <h3 class="ws10-u-heading--4 ws10-u--mb2x ws10-u-heading--4-lt">Fibra óptica
-    simétrica</h3>
-  <h3 class="ws10-u-heading--3"><strong>{{ velocidad }} de velocidad para tu hogar</strong></h3>
+  <h3 class="ws10-u-heading--4 ws10-u--mb2x ws10-u-heading--4-lt">{{{fibra.title}}}</h3>
+  <h3 class="ws10-u-heading--3">{{{fibra.subtitle}}}</h3>
 
   <div
     class="ws10-flex ws10-flex__justify--between vf-fiber__flexdirection ws10-flex__align-items--center"
