--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/productDetail.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/productDetail.hbs
@@ -1,5 +1,5 @@
 <li
-  class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop"
+  class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x {{#if thirdWidht }} {{ thirdWidht }} {{else}} ws10-u--1/2@desktop {{/if}}"
 >
   {{#if icon}}
     <svg
