Destiny Colectivos PLP - cardRates and CTA partials

--- a/destiny4.0/colectivos/plp/resources/templates/index.hbs
+++ b/destiny4.0/colectivos/plp/resources/templates/index.hbs
@@ -1,21 +1,20 @@
 <link href="css/ws10.css" rel="stylesheet" />
 <link href="css/styles.css" rel="stylesheet" data-ws10-microcss />
 
-
 <div class="vfes-ms-content">
 	<div class="vfes-ms-content ws10-u-color--bg-light-grey" id="plp-rates">
 		{{!-- FILETE CLIENTE --}}
 		{{> filet }}
+		{{!-- Section Banner --}}
 		{{> banner }}
-		{{!-- TABS CON TARIFAS --}}
+		{{!-- Section Rates --}}
 		{{> rates }}
 		{{!-- PASOS --}}
-		{{> timeline }}
+		{{> timeLine }}
 	</div>
 	{{!-- BACKDROPS --}}
 	{{> backdrop-filete }}
 </div>
 
 <script src="js/ws10.js"></script>
-
 <script src="js/main.js"></script>
