--- a/destiny4.0/colectivos/plp/resources/templates/partials/banner.hbs
+++ b/destiny4.0/colectivos/plp/resources/templates/partials/banner.hbs
@@ -2,8 +2,8 @@
     <div class="ws10-o-wrapper">
         <div class="ws10-o-layout">
             <div class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/4@desktop ws10-u--3/5@tablet">
-                <h2 class="ws10-u-heading--4-lt ws10-u--mb6x">Oferta para colectivos <strong>15% dto. 2 años</strong> </h2>
-                <p class="ws10-u-heading--2-lt">Elige una de las <strong>ofertas que</strong> tenemos <strong>para ti</strong></p>
+                <h2 class="ws10-u-heading--4-lt ws10-u--mb6x">{{{ banner.title }}}</h2>
+                <p class="ws10-u-heading--2-lt">{{{ banner.subtitle }}}</p>
             </div>
         </div>
     </div>
