--- a/destiny4.0/colectivos/plp/resources/templates/partials/rates.hbs
+++ b/destiny4.0/colectivos/plp/resources/templates/partials/rates.hbs
@@ -89,11 +89,11 @@
   </div>
   <div class="ws10-c-tabs-filter__w-panels">
 
-    <!----movil+fibra----->
+    <!-- movil+fibra -->
     {{> rates-fiber-mobile }}
-    <!----tarifa móvil--->
+    <!-- tarifa móvil -->
     {{> rates-mobile }}
-    <!----tarifa familiar--->
+    <!-- tarifa familiar -->
     {{> rates-family }}
 
   </div>
