--- a/destiny4.0/colectivos/plp/resources/templates/partials/rates-fiber-mobile.hbs
+++ b/destiny4.0/colectivos/plp/resources/templates/partials/rates-fiber-mobile.hbs
@@ -1,24 +1,23 @@
 <div id="panel-1" role="tabpanel" class="ws10-o-tabs__panel">
-  <div class="vf-rates">
-    <div
-      class="vf-rates__container ws10-o-layout ws10-flex__align-items--end"
-    >
-      <div
-        class="ws10-o-layout__item ws10-u--1/2@tablet ws10-u--1/3@desktop"
-      >
-        <!-- Vodafone One ilimitada-->
-        <div
-          class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow"
-          data-ws10-js="card-rate"
-        >
-          <div class="ws10-c-card-rate__w-rates">
-            <div class="ws10-c-card-rate__a-rate">
-              <ul
-                class="ws10-c-card-rate__product-info"
-                data-vfes-seo-empathy-promoperiod="50% dto. 3 meses Permanencia 1 año"
-                data-vfes-seo-empathy-promoprice="{{ rates.fiber-mobile.fibra300.dtoPrice }}"
-                data-vfes-seo-empathy-price="{{ rates.fiber-mobile.fibra300.dtoFinalPrice }}"
-              >
+    <div class="vf-rates">
+        <div class="vf-rates__container ws10-o-layout ws10-flex__align-items--end">
+
+            {{#each cardRates }}
+                {{> cardRate this }}
+            {{/each }}
+
+            <!-- <div class="ws10-o-layout__item ws10-u--1/2@tablet ws10-u--1/3@desktop">
+                <!-- Vodafone One ilimitada- ->
+
+
+
+                <div class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow" data-ws10-js="card-rate">
+                    <div class="ws10-c-card-rate__w-rates">
+                        <div class="ws10-c-card-rate__a-rate">
+                            <ul class="ws10-c-card-rate__product-info"
+                                data-vfes-seo-empathy-promoperiod="50% dto. 3 meses Permanencia 1 año"
+                                data-vfes-seo-empathy-promoprice="{{ rates.fiber-mobile.fibra300.dtoPrice }}"
+                                data-vfes-seo-empathy-price="{{ rates.fiber-mobile.fibra300.dtoFinalPrice }}" >
                 <li class="ws10-c-card-rate__product-info-item">
                   <svg
                     class="ws10-c-card-rate__product-icon ws10-u-color--black"
@@ -145,7 +144,7 @@
       <div
         class="ws10-o-layout__item ws10-u--1/2@tablet ws10-u--1/3@desktop"
       >
-        <!-- Vodafone One ilimitada Maxi -->
+        <!-- Vodafone One ilimitada Maxi - ->
         <div
           class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow"
           data-ws10-js="card-rate"
@@ -282,7 +281,7 @@
       <div
         class="ws10-o-layout__item ws10-u--1/2@tablet ws10-u--1/3@desktop"
       >
-        <!-- Vodafone One ilimitada Total -->
+        <!-- Vodafone One ilimitada Total - ->
         <div
           class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow"
           data-ws10-js="card-rate"
@@ -415,7 +414,8 @@
             </div>
           </div>
         </div>
-      </div>
+    </div> -->
+
+        </div>
     </div>
-  </div>
 </div>
