Destiny Colectivos PDP 300 - cardRates and CTA partials

--- a/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/index.hbs
+++ b/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/index.hbs
@@ -60,14 +60,10 @@ utag_data.plans_add2cart = [
 
 
 
-<div
-  class="vfes-ms-content ws10-u-color--bg-light-grey"
-  id="ilimitada"
-  style="visibility: hidden;opacity: 0"
->
+<div class="vfes-ms-content ws10-u-color--bg-light-grey" id="ilimitada" style="visibility: hidden;opacity: 0">
   {{> filete-cliente }}
   <!-- BANNER & DIV TICKET QUE INYECTA WCS -->
-  {{> banner }}
+  {{> headerTicket }}
   <!-- CONTENIDO EN 2/3 DE LA PÁGINA -->
   <div class="ws10-o-wrapper">
     <div class="ws10-o-layout">
