--- a/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/partials/headerTicket.hbs
+++ b/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/partials/headerTicket.hbs
@@ -1,27 +1,20 @@
 <section class="vf-banner ws10-u--1/1" data-js="_banner">
   <div class="ws10-o-wrapper">
     <div class="ws10-o-layout">
-      <div
-        class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet"
-      >
-        <span class="ws10-u-heading--4">
-          {{banner.heading.[0]}}
-          <strong>{{banner.heading.[1]}} {{banner.heading.[2]}}</strong>
-        </span>
-        <h2 class="ws10-u--pt5x ws10-u--3/4@desktop">
-          {{banner.heading2}}
-        </h2>
+      <div class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet">
+        <span class="ws10-u-heading--4">{{{ header.title }}}</span>
+        <h2 class="ws10-u--pt5x ws10-u--3/4@desktop">{{ header.title2 }}</h2>
 
         <a
           class="ws10-c-link-chevron ws10-c-link-chevron--primary"
           target="_blank"
-          href="{{banner.cta.url}}"
-          data-analytics-element="{{banner.cta.element}}"
-          data-analytics-context="{{banner.cta.context}}"
-          data-analytics-category="{{banner.cta.category}}"
-          data-analytics-id="{{banner.cta.id}}"
+          href="{{header.cta.url}}"
+          data-analytics-element="{{header.cta.element}}"
+          data-analytics-context="{{header.cta.context}}"
+          data-analytics-category="{{header.cta.category}}"
+          data-analytics-id="{{header.cta.id}}"
         >
-          {{banner.cta.label}}
+          {{ header.cta.label }}
           <span class="ws10-u--hidden-visually"> color #E60000</span>
           <svg
             class="ws10-c-link-chevron__icon"
@@ -37,9 +30,11 @@
       </div>
       <!-- Ticket -->
       <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt ws10-u--mb0 vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet">
-          {{ ticket.heading }}
+          {{ cardRates.title }}
       </h2>
-      <div
+      {{> cardRate cardRates }}
+
+      <!-- <div
         class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet"
         data-js-vf="_ticket"
       >
@@ -295,7 +290,7 @@
             </div>
           </section>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
