--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/cta.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/cta.hbs
@@ -1,6 +1,8 @@
 <a href="{{ url }}"
+    data-cta="{{ dataCTA }}"
     target="_self" name="{{ label }}" title="{{ label }}"
     class="ws10-c-button ws10-c-button--auto vf-button--mobile"
+    onmousedown="{{ onmousedown }}"
     data-analytics-context="{{ context }}"
     data-analytics-element="{{ element }}"
     data-analytics-category="{{ category }}"
