--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/deco.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/deco.hbs
@@ -12,52 +12,11 @@
             </a>
         </p>
     </div>
-    <div class="vf-deco__details ws10-flex ws10-flex__wrap">
-        <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-            <svg class="ws10-c-product-detail__icon" xmlns='http://www.w3.org/2000/svg'
-                    xmlns:xlink='http://www.w3.org/1999/xlink' width='24px' height='24px'>
-                <title>Icono Portal de video</title>
-                <use class="icon-v3" xlink:href="#icon-portals-for-videos-mid"></use>
-            </svg>
-            <p class="ws10-c-product-detail__text">Más de <strong>50.000 contenidos disponibles</strong>
-                bajo demanda.</p>
-        </div>
-        <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-            <svg class="ws10-c-product-detail__icon" xmlns='http://www.w3.org/2000/svg'
-                    xmlns:xlink='http://www.w3.org/1999/xlink' width='24px' height='24px'>
-                <title>Icono Play</title>
-                <use class="icon-v3" xlink:href="#icon-play-mid"></use>
-            </svg>
-            <p class="ws10-c-product-detail__text">No te pierdas nada, todo el <strong>contenido desde
-                el principio</strong> y con control del directo.</p>
-        </div>
-        <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-            <img class="ws10-c-product-detail__icon" src="img/section-deco/icon-control.svg"
-                    alt="icono control del contenido">
-            <p class="ws10-c-product-detail__text">Los contenidos <strong>siempre disponibles</strong>
-                con Últimos 7 días, Grabación, Ver Ahora y Descarga.</p>
-        </div>
-        <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-            <svg class="ws10-c-product-detail__icon" xmlns='http://www.w3.org/2000/svg'
-                    xmlns:xlink='http://www.w3.org/1999/xlink' width='24px' height='24px'>
-                <title>Icono Devices</title>
-                <use class="icon-v3" xlink:href="#icon-connected-devices-mid"></use>
-            </svg>
-            <p class="ws10-c-product-detail__text"><strong>2 reproducciones simultáneas</strong> en
-                diferentes dispositivos.</p>
-        </div>
-        <div class="ws10-c-product-detail ws10-u--mt2x ws10-u--mb2x ws10-u--pr3x ws10-u--1/2@desktop">
-            <img class="ws10-c-product-detail__icon" src="img/section-deco/icono-5-g.svg"
-                    alt="icono descarga">
-            <p class="ws10-c-product-detail__text"><strong>Descarga tus contenidos</strong> para verlos
-                estés donde estés y cuando quieras.</p>
-        </div>
-    </div>
 
 
 <ul class="vf-deco__details ws10-flex ws10-flex__wrap">
     {{#each deco.productDetail}}
-  {{> productDetail params=this}}
+  {{> productDetail this}}
     {{/each}}
   </ul>
 
