Destiny One y Colectivos - change prices rates

--- a/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/partials/cardRate.hbs
+++ b/destiny4.0/colectivos/ilimitada_avanzada_300/resources/templates/partials/cardRate.hbs
@@ -62,7 +62,7 @@
                             </div>
                         </fieldset>
 
-                        {{#each prizes }}
+                        {{#each rates }}
                             <div>
                                 <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price {{ hidden }}" data-js-vf="{{ js-vf }}">
                                     <strong>{{ offers.discount }}</strong>
