--- a/destiny4.0/one/ilimitada-plus-600/resources/templates/partials/cardRate.hbs
+++ b/destiny4.0/one/ilimitada-plus-600/resources/templates/partials/cardRate.hbs
@@ -62,7 +62,7 @@
                               </div>
                           </fieldset>
 
-                          {{#each prizes }}
+                          {{#each rates }}
                               <div class="ws10-c-card-rate__w-cta {{ hidden }}" data-js-vf="{{ js-vf }}">
                                   <div class="ws10-c-card-rate__w-offers">
                                       <div class="ws10-c-card-rate__offer" id="rate-1-offer-1">
