Destiny Norte - cardRates and CTA partials

--- a/destiny4.0/Norte/plp/resources/templates/index.hbs
+++ b/destiny4.0/Norte/plp/resources/templates/index.hbs
@@ -2,17 +2,16 @@
 <link href="css/styles.css" rel="stylesheet" data-ws10-microcss  />
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="plp" style="visibility: hidden;opacity: 0">
     <!-- Section BANNER -->
-    {{> banner }}  
+    {{> banner }}
 
     <div class="ws10-o-wrapper">
         <!-- Section RATES -->
-        {{> rates }}
-
+        {{> cardRates }}
         <!-- Sections Vodafone One -->
         {{> vodafoneOne }}
         <!-- Sections Banner 50 -->
         {{> banner50 }}
-        
+
          <!--{{> table }}-->
     </div>
 </div>
