--- a/destiny4.0/Norte/plp/resources/templates/partials/banner.hbs
+++ b/destiny4.0/Norte/plp/resources/templates/partials/banner.hbs
@@ -3,16 +3,12 @@
   <div class="vf-banner__container ws10-o-wrapper">
     <div class="ws10-o-layout ws10-u--pb0 ws10-u--pt6x">
       <div class="ws10-o-layout__item ws10-u--1/2@desktop">
-        <h2 class="ws10-u-heading--4 ws10-u--mb2x">Fibra + Móvil</h2>
+        <h2 class="ws10-u-heading--4 ws10-u--mb2x">{{{ banner.title }}}</h2>
         <b
           class="ws10-c-badge-text ws10-c-badge-text--turquoise ws10-u--mt2x ws10-u--mr1x vfms-badge3"
-        >Oferta para Navarra, Euskadi, Asturias y Galicia</b>
-        <p
-          class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner ws10-u--mt2x"
-        >
-
-        <span>Llévate <strong> 2 líneas ilimitadas</strong> y fibra <strong> al 50% dto. 6 meses</strong></span>
-          
+        >{{ banner.badge }}</b>
+        <p class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner ws10-u--mt2x">
+            <span>{{{ banner.title2 }}}</span>
         </p>
       </div>
       <div class="ws10-o-layout__item ws10-u--1/2@desktop">
