--- a/destiny4.0/one/plp/resources/templates/partials/banner.hbs
+++ b/destiny4.0/one/plp/resources/templates/partials/banner.hbs
@@ -7,10 +7,7 @@
         <p
           class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner"
         >
-          <span>{{ banner.title.[0] }}
-            <strong>{{ banner.title.[1] }}</strong>
-            {{ banner.title.[2] }}
-            <strong>{{ banner.title.[3] }}</strong>
+          <span>{{{ banner.title }}}
           </span>
         </p>
       </div>
