Destiny Norte PDPs - cardRates and CTA partials

--- a/destiny4.0/Norte/ilimitada_plus_600/resources/templates/index.hbs
+++ b/destiny4.0/Norte/ilimitada_plus_600/resources/templates/index.hbs
@@ -37,7 +37,7 @@ utag_data.plans_add2cart = [
     "product_id": "",
     "product_detail": "",
     "product_sale_type": "yes:transactional",
-         
+
         "product_packs_tv": [{
         "product_name": "pack seriefans",
         "product_category": "tv",
@@ -51,9 +51,10 @@ utag_data.plans_add2cart = [
 
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="maxi" style="visibility: hidden;opacity: 0">
 
-
     <!-- BANNER & DIV TICKET QUE INYECTA WCS -->
-    <section class="vf-banner ws10-u--1/1" data-js="_banner">
+    {{> headerTicket }}
+
+    <!-- <section class="vf-banner ws10-u--1/1" data-js="_banner">
         <div class="ws10-o-wrapper">
             <div class="ws10-o-layout">
                 <div class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet">
@@ -251,7 +252,7 @@ utag_data.plans_add2cart = [
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- CONTENIDO EN 2/3 DE LA PÁGINA -->
     <div class="ws10-o-wrapper">
         <div class="ws10-o-layout">
