--- a/destiny4.0/one/ilimitada-avanzada-600/resources/templates/partials/headerTicket.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-600/resources/templates/partials/headerTicket.hbs
@@ -3,7 +3,7 @@
     <div class="ws10-o-layout">
       <div class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet">
         <span class="ws10-u-heading--4">{{{ header.title }}}</strong></span>
-        <h2 class="ws10-u--pt5x ws10-u--3/4@desktop" >{{{ header.title2 }}}</h2>
+        <h2 class="ws10-u-heading--2-lt ws10-u--pt5x ws10-u--3/4@desktop">{{{ header.title2 }}}</h2>
         <span class="ws10-u-color--primary ws10-flex ws10-flex__align-items--center ws10-u--hidden-visually-until@tablet">
           <img class="ws10-u--pr1x" alt="icono mejor precio Vodafone" src="{{ header.icon }}"/>
           <span>{{ header.label }}</span>
