Destiny Colectivos - Text changes

--- a/destiny4.0/colectivos/ilimitada_plus_600/resources/templates/partials/headerTicket.hbs
+++ b/destiny4.0/colectivos/ilimitada_plus_600/resources/templates/partials/headerTicket.hbs
@@ -4,8 +4,7 @@
     <div class="ws10-o-layout">
       <div class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet">
         <span class="ws10-u-heading--4">{{{ header.title }}}</span>
-        <h2 class="ws10-u--pt5x ws10-u--3/4@desktop">{{{ header.title2 }}}</h2>
-
+        <h2 class="ws10-u-heading--2-lt ws10-u--pt5x ws10-u--3/4@desktop">{{{ header.title2 }}}</h2>
         <a
           class="ws10-c-link-chevron ws10-c-link-chevron--primary"
           target="_blank"
