arreglo de cta para que coja classes

--- a/destiny4.0/one/ilimitada-avanzada-600/resources/templates/partials/cta.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-600/resources/templates/partials/cta.hbs
@@ -20,7 +20,7 @@
     target="_self"
     name="{{label}}"
     title="{{label}}"
-    class="{{class}}"
+    class="{{classCta}}"
     onmousedown="{{onmousedown}}"
     data-analytics-context="{{context}}"
     data-analytics-element="{{element}}"
