--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/index.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/index.hbs
@@ -30,7 +30,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 3
 
 
                 <!-- SIN SORPRESAS -->
-                {{> sinSorpresas }}
+                {{> sinsorpresas }}
                 <!-- TIMELINE  -->
                 {{> timeline }}
             </div>
