--- a/destiny4.0/one/ilimitada-plus-600/resources/templates/index.hbs
+++ b/destiny4.0/one/ilimitada-plus-600/resources/templates/index.hbs
@@ -14,9 +14,9 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
         <div class="ws10-o-layout">
             <div class="ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet">
                 <!-- MÓVIL -->
-                {{> movil }}
+                {{> mobile }}
                 <!-- SEGUNDA LÍNEA GRATIS -->
-                {{> secondline }}
+                {{> secondLine }}
 
                 <!--TV -->
                 {{> tv }}
