Destiny One - Timeline title

--- a/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/timeline.hbs
+++ b/destiny4.0/one/ilimitada-avanzada-300/resources/templates/partials/timeline.hbs
@@ -1,5 +1,5 @@
 <section class="vf-timeline ws10-u--pt12x">
-  <h3 class="ws10-u-heading--4"><strong>¿Cómo contrato {{ header-ticket.title-ticket }}?</strong></h3>
+  <h3 class="ws10-u-heading--4"><strong>¿Cómo contrato {{ cardRates.title }}?</strong></h3>
   <ul class="ws10-c-timeline-steps">
     <li class="ws10-c-timeline-steps__item">
       <svg
